# slox

./: .clang-tidy  .gitignore  LICENSE  README.md  main.cpp  meson.build
include/: analysis.h  ast.h  eval.h  interpreter.h  lexer.h  parser.h  utils.h
src/: analysis.cpp  ast.cpp  eval.cpp  interpreter.cpp  lexer.cpp  parser.cpp  utils.cpp
test/: eval.cpp  lexer.cpp  main.cpp  parser.cpp
